// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render error 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-7 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 2px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #318AF5;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  padding-bottom: 8px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-14 a {
  color: #ffffff;
  background-color: #3b3b3b;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-14 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #2e2e2e;
}

.emotion-15 {
  padding-top: 8px;
}

.emotion-16 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-17 {
  position: relative;
}

.emotion-18 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-18:focus,
.emotion-18 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18:hover,
.emotion-18 .noop {
  border: 2px solid #ffffff;
}

.emotion-19 {
  padding-top: 8px;
}

.emotion-20 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

.emotion-25 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-26 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  outline-offset: -2px;
}

.emotion-26:hover {
  color: #73b61c;
}

.emotion-29 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-30 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-30,
.emotion-30:hover,
.emotion-30:visited,
.emotion-30 .noop {
  background-color: #73b61c;
}

.emotion-30:hover,
.emotion-30 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-30[aria-disabled=true],
.emotion-30 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-31 {
  padding-top: 32px;
  text-align: center;
}

.emotion-31 a {
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Password has been updated.
      </div>
    </div>
  </div>
  <form
    className="emotion-4"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-7"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-11"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-13"
      >
        <svg
          color="#c92300"
          data-file-name="warning.svg"
          height={20}
        />
        <div
          className="emotion-14"
          role="alert"
        >
          Something went wrong
          <br />
          <a
            href="mailto:support@zorroa.com?subject=ZVI Console Login Trouble"
            rel="noopener noreferrer"
            target="_blank"
          >
            Contact Support
          </a>
        </div>
      </div>
    </div>
    <div
      className="emotion-15"
    >
      <label
        className="emotion-16"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-17"
      >
        <input
          autoFocus={true}
          className="emotion-18"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-19"
      >
        <span
          className="emotion-20"
        >
          
        </span>
         
      </div>
    </div>
    <div
      className="emotion-15"
    >
      <label
        className="emotion-16"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-17"
      >
        <input
          className="emotion-18"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-25"
        >
          <button
            aria-label="Show password"
            className="emotion-26"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-19"
      >
        <span
          className="emotion-20"
        >
          
        </span>
         
      </div>
    </div>
    <div
      className="emotion-29"
    >
      <button
        aria-disabled={true}
        className="emotion-30"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-31"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render password changed 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-7 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 2px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #318AF5;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  padding-top: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-14 {
  position: relative;
}

.emotion-15 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-15:focus,
.emotion-15 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-15:hover,
.emotion-15 .noop {
  border: 2px solid #ffffff;
}

.emotion-16 {
  padding-top: 8px;
}

.emotion-21 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  outline-offset: -2px;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-24 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-25,
.emotion-25:hover,
.emotion-25:visited,
.emotion-25 .noop {
  background-color: #73b61c;
}

.emotion-25:hover,
.emotion-25 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-25[aria-disabled=true],
.emotion-25 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-26 {
  padding-top: 32px;
  text-align: center;
}

.emotion-26 a {
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Password has been updated.
      </div>
    </div>
  </div>
  <form
    className="emotion-4"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-7"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-11"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-14"
      >
        <input
          autoFocus={true}
          className="emotion-15"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-14"
      >
        <input
          className="emotion-15"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-21"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-24"
    >
      <button
        aria-disabled={true}
        className="emotion-25"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-26"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-7 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 2px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #318AF5;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  padding-top: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-14 {
  position: relative;
}

.emotion-15 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-15:focus,
.emotion-15 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-15:hover,
.emotion-15 .noop {
  border: 2px solid #ffffff;
}

.emotion-16 {
  padding-top: 8px;
}

.emotion-21 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  outline-offset: -2px;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-24 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-25,
.emotion-25:hover,
.emotion-25:visited,
.emotion-25 .noop {
  background-color: #73b61c;
}

.emotion-25:hover,
.emotion-25 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-25[aria-disabled=true],
.emotion-25 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-26 {
  padding-top: 32px;
  text-align: center;
}

.emotion-26 a {
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Password reset email sent.
      </div>
    </div>
  </div>
  <form
    className="emotion-4"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-7"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-11"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-14"
      >
        <input
          autoFocus={true}
          className="emotion-15"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-14"
      >
        <input
          className="emotion-15"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-21"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-24"
    >
      <button
        aria-disabled={true}
        className="emotion-25"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-26"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly on account activation success 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-7 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 2px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #318AF5;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  padding-top: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-14 {
  position: relative;
}

.emotion-15 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-15:focus,
.emotion-15 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-15:hover,
.emotion-15 .noop {
  border: 2px solid #ffffff;
}

.emotion-16 {
  padding-top: 8px;
}

.emotion-21 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  outline-offset: -2px;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-24 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-25,
.emotion-25:hover,
.emotion-25:visited,
.emotion-25 .noop {
  background-color: #73b61c;
}

.emotion-25:hover,
.emotion-25 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-25[aria-disabled=true],
.emotion-25 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-26 {
  padding-top: 32px;
  text-align: center;
}

.emotion-26 a {
  color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Account activated. Please login now.
      </div>
    </div>
  </div>
  <form
    className="emotion-4"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-7"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-11"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-14"
      >
        <input
          autoFocus={true}
          className="emotion-15"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <label
        className="emotion-13"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-14"
      >
        <input
          className="emotion-15"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-21"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
    <div
      className="emotion-24"
    >
      <button
        aria-disabled={true}
        className="emotion-25"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-26"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;
